@startuml

title __CATCHUP's Class Diagram__\n

  namespace org.factcast.store.pgsql {
    namespace internal {
      namespace catchup {
        class org.factcast.store.pgsql.internal.catchup.PgCatchUpFetchPage {
            - clientId : long
            - jdbc : JdbcTemplate
            {static} - log : Logger
            - pageSize : int
            + PgCatchUpFetchPage()
            + fetchFacts()
            - createSetter()
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace internal {
      namespace catchup {
        class org.factcast.store.pgsql.internal.catchup.PgCatchUpPrepare {
            - jdbc : JdbcTemplate
            {static} - log : Logger
            + PgCatchUpPrepare()
            + prepareCatchup()
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace internal {
      namespace catchup {
        interface org.factcast.store.pgsql.internal.catchup.PgCatchup {
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace internal {
      namespace catchup {
        interface org.factcast.store.pgsql.internal.catchup.PgCatchupFactory {
            {abstract} + create()
        }
      }
    }
  }
  

  org.factcast.store.pgsql.internal.catchup.PgCatchUpFetchPage o-- org.factcast.core.subscription.SubscriptionRequestTO : req
  org.factcast.store.pgsql.internal.catchup.PgCatchUpPrepare o-- org.factcast.core.subscription.SubscriptionRequestTO : req


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
